--- a/packages/coinbasePro/package.json
+++ b/packages/coinbasePro/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^2.1.0",
+    "@google-cloud/storage": "^5.1.1",
     "coinbase-pro": "^0.9.0"
   }
 }
